--- a/src/views/job-edit.html
+++ b/src/views/job-edit.html
@@ -23,13 +23,13 @@
       rel="stylesheet"
     />
 
-    <script type="module" src="./scripts/job-edit.js"></script>
+    <script type="module" src="/scripts/job-edit.js"></script>
     
   </head>
   <body id="page-job-edit">
     <header class="page-header inner">
       <div class="container animate-up">
-        <a href="index.html" class="back">
+        <a href="/" class="back">
           <img src="/images/back.svg" alt="" />
         </a>
         <h1>Editar Job</h1>
