refactoring-code-index/profile

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -35,8 +35,8 @@
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4" alt="Jakeliny">
-        <h2>Jakeliny</h2>
+        <img src="https://avatars.githubusercontent.com/u/74614495?v=4" alt="luiscetta">
+        <h2>Luis Filipe Cetta</h2>
         <p>
           O valor da sua hora é <br/>
           <strong>R$ 75,00</strong>
