add-static-profile-using-ejs

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -30,13 +30,20 @@
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="https://avatars.githubusercontent.com/u/74614495?v=4" alt="luiscetta">
-        <h2>Luis Filipe Cetta</h2>
+        <img 
+          src="<%= profile.avatar %> " 
+          alt="<%= profile.name %> ">
+        <h2>
+          <%= profile.name %>
+        </h2>
         <p>
           O valor da sua hora é <br />
           <strong>R$ 75,00</strong>
         </p>
-        <button class="button green" form="form-profile" type="submit">Salvar dados</button>
+        <button 
+          class="button green" 
+          form="form-profile" 
+          type="submit">Salvar dados</button>
       </aside>
       <main>
 
@@ -48,12 +55,21 @@
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="name">Nome</label>
-                <input type="text" id="name" name="name" />
+                <input 
+                  type="text" 
+                  id="name" 
+                  name="name" 
+                  value="<%= profile.name %> " />
               </div>
 
               <div class="input-wrapper">
                 <label for="avatar">Link da foto</label>
-                <input placeholder="https://" type="url" id="avatar" name="avatar" />
+                <input 
+                  placeholder="https://" 
+                  type="url" 
+                  id="avatar" 
+                  name="avatar" 
+                  value="<%= profile.avatar %> " />
               </div>
             </div>
           </fieldset>
@@ -65,13 +81,22 @@
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="monthly-budget">Quanto eu <br />quero ganhar por mês?</label>
-                <input type="amount" step="0.1" id="monthly-budget" name="monthly-budget" placeholder="R$" />
+                <input 
+                  type="amount" 
+                  step="0.1" id="monthly-budget" 
+                  name="monthly-budget" 
+                  placeholder="R$" 
+                  value="<%= profile["monthly-budget"] %> " />
               </div>
 
               <div class="input-wrapper">
                 <label for="hours-per-day">Quantas horas <br />
                   quero trabalhar por dia?</label>
-                <input type="number" id="hours-per-day" name="hours-per-day" />
+                <input 
+                  type="number" 
+                  id="hours-per-day" 
+                  name="hours-per-day" 
+                  value="<%= profile["hours-per-day"] %>" />
               </div>
             </div>
 
@@ -79,13 +104,21 @@
               <div class="input-wrapper">
                 <label for="days-per-week">Quantos dias <br />quero
                   trabalhar por semana?</label>
-                <input type="number" id="days-per-week" name="days-per-week" />
+                <input 
+                  type="number" 
+                  id="days-per-week" 
+                  name="days-per-week" 
+                  value="<%= profile["days-per-week"] %>" />
               </div>
 
               <div class="input-wrapper">
                 <label for="vacation-per-year">Quantas semanas <br />
                   por ano você quer tirar férias?</label>
-                <input type="number" id="vacation-per-year" name="vacation-per-year" />
+                <input 
+                  type="number" 
+                  id="vacation-per-year" 
+                  name="vacation-per-year" 
+                  value="<%= profile["vacation-per-year"] %>" />
               </div>
             </div>
           </fieldset>
