--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,7 +29,11 @@
       <div class="container">
         <section id="top" class="animate-up">
           <h2 class="sr-only">Homepage</h2>
-          <img id="logo" src="/images/logo.svg" alt="Logo" />
+          <img 
+            id="logo" 
+            src="/images/logo.svg"
+            alt="Logo" 
+          />
           <span id="notification">
             <img src="/images/alert-octagon.svg" alt="Alerta" />
             Você tem 2 horas livres no seu dia
@@ -144,7 +148,11 @@
 
     <div class="modal-wrapper">
       <div class="modal">
-        <img src="/images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
+        <img 
+          src="/images/trash-48.svg" 
+          alt="Excluir Job" 
+          title="Excluir Job" 
+        />
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
         Ele será apagado para sempre.  
