--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -37,20 +37,36 @@
 
         <div class="input-wrapper">
           <label for="name">Nome do Job</label>
-          <input type="text" id="name" name="name" value="Pizzaria Guloso" />
+          <input 
+            type="text" 
+            id="name" 
+            name="name" 
+            value="Pizzaria Guloso" 
+          />
         </div>
 
         <div class="input-group">
           <div class="input-wrapper">
             <label for="daily-hours">Quantas horas <br />
               por dia vai dedicar ao job?</label>
-            <input type="number" step="0.1" id="daily-hours" name="daily-hours" value="2" />
+            <input 
+              type="number" 
+              step="0.1" 
+              id="daily-hours" 
+              name="daily-hours" 
+              value="2" 
+            />
           </div>
 
           <div class="input-wrapper">
             <label for="total-hours">Estimativa de <br />
               horas para esse Job?</label>
-            <input type="number" id="total-hours" name="total-hours" value="40" />
+            <input 
+              type="number" 
+              id="total-hours" 
+              name="total-hours" 
+              value="40" 
+            />
           </div>
         </div>
       </fieldset>
@@ -63,9 +79,18 @@
         O valor do projeto ficou em <strong>R$ 4576,00</strong>
       </p>
       <div class="button-group">
-        <button class="button green" form="form-job" type="submit" title="Salvar Dados">Salvar</button>
+        <button 
+          class="button green" 
+          form="form-job" 
+          type="submit" 
+          title="Salvar Dados">Salvar
+        </button>
         <a href="#" class="button gray open-modal">
-          <img src="/images/trash-24.svg" alt="Cancelar cadastro" title="Cancelar cadastro">
+          <img 
+            src="/images/trash-24.svg" 
+            alt="Cancelar cadastro" 
+            title="Cancelar cadastro"
+          >
         </a>
       </div>
     </aside>
@@ -75,17 +100,29 @@
 
   <div class="modal-wrapper">
     <div class="modal">
-      <img src="/images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
+      <img 
+        src="/images/trash-48.svg" 
+        alt="Excluir Job" 
+        title="Excluir Job" 
+      />
       <h3>Excluir Job</h3>
       <p>Quer mesmo excluir esse job? <br />
         Ele será apagado para sempre.
       <p>
       <footer>
         <a class="button gray" href="#">Cancelar</a>
-        <button class="button red" type="submit" form="delete-job">Excluir Job</button>
+        <button 
+          class="button red" 
+          type="submit" 
+          form="delete-job">Excluir Job
+        </button>
       </footer>
     </div>
-    <form method="post" action="/job/delete/{JOBID}" id="delete-job"></form>
+    <form 
+      method="post" 
+      action="/job/delete/{JOBID}" 
+      id="delete-job">
+    </form>
   </div>
   <!-- end modal-wrapper -->
   </body>
