--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -37,20 +37,33 @@
 
             <div class="input-wrapper">
               <label for="name">Nome do Job</label>
-              <input type="text" id="name" name="name" />
+              <input 
+                type="text" 
+                id="name" 
+                name="name"
+              />
             </div>
 
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="daily-hours">Quantas horas <br />
                   por dia vai dedicar ao job?</label>
-                <input type="number" step="0.1" id="daily-hours" name="daily-hours" />
+                <input 
+                  type="number" 
+                  step="0.1" 
+                  id="daily-hours" 
+                  name="daily-hours" 
+                />
               </div>
 
               <div class="input-wrapper">
                 <label for="total-hours">Estimativa de <br />
                   horas para esse Job?</label>
-                <input type="number" id="total-hours" name="total-hours" />
+                <input 
+                  type="number" 
+                  id="total-hours" 
+                  name="total-hours" 
+                />
               </div>
             </div>
           </fieldset>
@@ -58,15 +71,27 @@
         </form>
       </main>
       <aside class="card">
-        <img src="/images/money-gray.svg" alt="Imagem de Dinheiro">
+        <img 
+          src="/images/money-gray.svg" 
+          alt="Imagem de Dinheiro"
+        >
         <p>
           Preencha os dados ao lado para
           ver o valor do projeto
         </p>
         <div class="button-group">
-          <button class="button green" form="form-job" type="submit" title="Salvar Dados">Salvar</button>
+          <button 
+            class="button green" 
+            form="form-job" 
+            type="submit" 
+            title="Salvar Dados">Salvar
+          </button>
           <a href="/" class="button gray">
-            <img src="/images/trash-24.svg" alt="Cancelar cadastro" title="Cancelar cadastro">
+            <img 
+              src="/images/trash-24.svg" 
+              alt="Cancelar cadastro" 
+              title="Cancelar cadastro"
+            >
           </a>
         </div>
       </aside>
