--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -86,7 +86,8 @@
                   step="0.1" id="monthly-budget" 
                   name="monthly-budget" 
                   placeholder="R$" 
-                  value="<%= profile["monthly-budget"] %> " />
+                  value="<%= profile["monthly-budget"] %> " 
+                />
               </div>
 
               <div class="input-wrapper">
@@ -96,7 +97,8 @@
                   type="number" 
                   id="hours-per-day" 
                   name="hours-per-day" 
-                  value="<%= profile["hours-per-day"] %>" />
+                  value="<%= profile["hours-per-day"] %>" 
+                />
               </div>
             </div>
 
@@ -108,7 +110,8 @@
                   type="number" 
                   id="days-per-week" 
                   name="days-per-week" 
-                  value="<%= profile["days-per-week"] %>" />
+                  value="<%= profile["days-per-week"] %>" 
+                />
               </div>
 
               <div class="input-wrapper">
@@ -118,7 +121,8 @@
                   type="number" 
                   id="vacation-per-year" 
                   name="vacation-per-year" 
-                  value="<%= profile["vacation-per-year"] %>" />
+                  value="<%= profile["vacation-per-year"] %>" 
+                />
               </div>
             </div>
           </fieldset>
