creating-post-route/ authorization-req.body

--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -30,7 +30,11 @@
 
     <div class="container flex animate-up delay-2">
       <main>
-        <form id="form-job">
+        <!-- Guardar dados form job com action e alterando o method. -->
+        <form 
+          id="form-job" 
+          action="/job" 
+          method="POST">
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
