refactoring-routes-code-remaining-days

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -83,8 +83,9 @@
           <div class="card progress" data-id="<%= job.id %> ">
             <div class="id column"><%= job.id %> </div>
             <div class="name column">
+
               <!-- Imprimindo os dados do jobs com EJS. -->
-              <%= jobs[0].name %>
+              <%= job.name %>
             </div>
             <div class="deadline column">
               <span>Prazo</span>
